@@ -217,6 +217,7 @@ type
     tvrageid: String;
     tvtag: String;
     tvlanguage: String;
+    tvrating: integer;
 
     constructor Create(const rlsname, section: String; FakeChecking: boolean = True; SavedPretime: int64 = -1); override;
     destructor Destroy; override;
@@ -1993,6 +1994,8 @@ begin
     Result := Result + Format('Running: %s', [BoolToStr(running, True)]) + #13#10;
     if status <> '' then
       Result := Result + Format('Status: %s', [status]) + #13#10;
+    if tvrating > -1 then
+      Result := Result + Format('Rating: %d', [tvrating]) + #13#10;
     Result := Result + Format('Current Season: %s', [BoolToStr(currentseason, True)]) + #13#10;
     Result := Result + Format('Current Episode: %s', [BoolToStr(currentepisode, True)]) + #13#10;
     Result := Result + Format('Current on Air: %s', [BoolToStr(currentair, True)]) + #13#10;
